--- a/packages/client-websocket/package.json
+++ b/packages/client-websocket/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@xmpp/connection": "^0.0.6",
     "@xmpp/xml": "^0.1.3",
-    "ws": "^2.2.0"
+    "uws": "^0.14.1"
   },
   "browser": {
     "ws": false
