--- a/packages/middleware/package.json
+++ b/packages/middleware/package.json
@@ -2,16 +2,18 @@
   "name": "@xmpp/middleware",
   "description": "XMPP middleware for JavaScript",
   "repository": "github:xmppjs/xmpp.js",
-  "homepage":
-    "https://github.com/xmppjs/xmpp.js/tree/master/packages/middlware",
+  "homepage": "https://github.com/xmppjs/xmpp.js/tree/master/packages/middlware",
   "bugs": "http://github.com/xmppjs/xmpp.js/issues",
   "version": "0.3.0",
   "license": "ISC",
-  "keywords": ["XMPP", "middleware"],
+  "keywords": [
+    "XMPP",
+    "middleware"
+  ],
   "dependencies": {
     "@xmpp/jid": "^0.3.0",
     "@xmpp/xml": "^0.3.0",
-    "koa-compose": "^4.0.0"
+    "koa-compose": "^4.1.0"
   },
   "engines": {
     "node": ">= 7.6.0",
