--- a/packages/uri/package.json
+++ b/packages/uri/package.json
@@ -6,10 +6,13 @@
   "bugs": "http://github.com/xmppjs/xmpp.js/issues",
   "version": "0.3.0",
   "license": "ISC",
-  "keywords": ["XMPP", "URI"],
+  "keywords": [
+    "XMPP",
+    "URI"
+  ],
   "dependencies": {
     "@xmpp/jid": "^0.3.0",
-    "iri": "^1.1.1"
+    "iri": "^1.3.0"
   },
   "engines": {
     "node": ">= 7.6.0",
